--- a/MTM6201/portfolio/css/style.css
+++ b/MTM6201/portfolio/css/style.css
@@ -90,7 +90,7 @@ a {
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 25px;
-    padding: .2em 0px;
+    padding: .3em 0px;
 }
 
 h2 {
@@ -104,6 +104,10 @@ a {
     font-weight: 300;
     font-size: 16px;
     text-decoration: none;
+}
+
+p {
+    text-align: justify;
 }
 
 
@@ -175,7 +179,7 @@ img {
     grid-template-columns: 1fr 1fr;
 }
 
-div > ul > * {
+div > ul > li > * {
     text-align: center;
 }
 
